Fixed spacing, index cards now hold entire title, fixed input-fields

--- a/circa/static/css/custom.css
+++ b/circa/static/css/custom.css
@@ -5,6 +5,8 @@
     max-width: 250px;
     background: #f5fafa;
     border: 1px solid #eaeaea;
+    max-height: 150px;
+    min-height: 150px;
 }
 
 .thumbnail.cust {
@@ -17,12 +19,23 @@
 h4.thumb-title {
     margin-top: 0px;
     padding-bottom: 10px;
+
+    /* Compensate for materialize */
+    font-size: 18px;
+    line-height: 1.1;
+}
+
+.btn.custom {
+    padding: 0 1rem;
 }
 
 span.thumb-content {
     padding: 10px;
     background: #009ee1;
     color: white;
+
+    position: absolute;
+    bottom: 40px;
 }
 
 .listing-panel {
@@ -35,51 +48,19 @@ h3.listing-title {
     margin-top: 0px;
     border-bottom: 2px solid #4f4f4f;
     padding-bottom: 15px;
+
+    /* Compensate for materialize */
+    font-size: 24px;
+    line-height: 1.1;
 }
 
 h3.price-title {
     margin-top: 0px;
     padding-bottom: 15px;
-}
 
-input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea {
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #9e9e9e;
-    border-radius: 0;
-    outline: none;
-    height: 3rem;
-    width: 100%;
-    font-size: 2rem;
-    margin: 0 0 15px 0;
-    padding: 0;
-    box-shadow: none;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    transition: all .3s;
-}
-
-.input-field label {
-    color: #9e9e9e;
-    position: absolute;
-    top: 0.8rem;
-    left: 0.75rem;
-    font-size: 1.5rem;
-    cursor: text;
-    -webkit-transition: .2s ease-out;
-    -moz-transition: .2s ease-out;
-    -o-transition: .2s ease-out;
-    -ms-transition: .2s ease-out;
-    transition: .2s ease-out;
-}
-
-.file-field .btn, .file-field .btn-large {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 3rem;
-    line-height: 1.42857143;
+    /* Compensate for materialize */
+    font-size: 24px;
+    line-height: 1.1;
 }
 
 nav ul a {
@@ -115,4 +96,30 @@ nav ul a {
   color: white;
   text-shadow: #444 0 1px 1px;
   background:transparent;
+}
+
+/* This corrects the container to Bootstrap's instead of materializes */
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
